[package]
name = "perps-expert-advisor"
version = "0.1.0"
authors = ["ch4r10t33r <psramanuj@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
tokio = { version = "1.35.1", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-retry = "0.3.0"
tokio-scoped = { version = "0.2.0" }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin", branch = "main" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
